hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_push_missing_parameter.php
<?php
$dll = new SplDoublyLinkedList();
var_dump($dll->push());
?>